--- a/scss/sheets/_npc-sheet.scss
+++ b/scss/sheets/_npc-sheet.scss
@@ -41,7 +41,7 @@ section.char-top {
 			input {
 				text-transform: uppercase;
 				text-align: center;
-				color: gold;
+				color: var(--blades-gold);
 			}
 		}
 
