--- a/scss/core/_vars.scss
+++ b/scss/core/_vars.scss
@@ -140,11 +140,29 @@ $isCompactLayout: true;
 	--blades-grey-dark-nums: 68, 68, 68;
 	--blades-black-nums: 32, 32, 32;
 	--blades-black-dark-nums: 0, 0, 0;
-	--blades-gold-bright-nums: 253, 212, 112;
-	--blades-gold-nums: 218, 165, 32; // 171, 146, 84;
-	--blades-gold-dark-nums: 126, 91, 4;
-	--blades-red-nums: 132, 12, 36;
+
+	$gold_up5: rgb(255, 234, 112);
+	$gold_up4: rgb(255, 231, 92);
+	$gold: rgb(255, 215, 0);
+	$gold_down4: rgb(184, 156, 0);
+	$gold_down5: rgb(163, 139, 0);
+
+	$gold_bright: rgb(253, 212, 112);
+	$gold_med: rgb(218, 165, 32);
+	$gold_dark: rgb(126, 91, 4);
+
+
+	--blades-gold-bright-nums: 255, 231, 92; // 253, 212, 112;
+	--blades-gold-nums: 255, 215, 0; // 171, 146, 84;
+	--blades-gold-dark-nums: 184, 156, 0;
+
+	$red-bright: rgb(220, 20, 60);
+	$red: rgb(204, 0, 0);
+	$red-dark: rgb(122, 0, 0);
+
 	--blades-red-bright-nums: 220, 20, 60;
+	--blades-red-nums: 204, 0, 0;
+	--blades-red-dark-nums: 122, 0, 0;
 
 	--blades-white-bright: rgba(var(--blades-white-bright-nums), 1);
 	--blades-white: rgba(var(--blades-white-nums), 1);
@@ -168,8 +186,9 @@ $isCompactLayout: true;
 	--blades-gold: rgba(var(--blades-gold-nums), 1);
 	--blades-gold-dark: rgba(var(--blades-gold-dark-nums), 1);
 
-	--blades-red: rgba(var(--blades-red-nums), 1);
 	--blades-red-bright: rgba(var(--blades-red-bright-nums), 1);
+	--blades-red: rgba(var(--blades-red-nums), 1);
+	--blades-red-dark: rgba(var(--blades-red-dark-nums), 1);
 
 	--blades-color-negative: var(--blades-red-bright);
 	--blades-color-positive: var(--blades-gold-bright);
