--- a/scss/sheets/_pc-sheet.scss
+++ b/scss/sheets/_pc-sheet.scss
@@ -14,11 +14,11 @@ section.char-top {
 	}
 
 	.char-class {
-		--labelled-input-img-scale: 2;
+		--labelled-item-img-scaleX: -2;
+		--labelled-item-img-scaleY: 2;
 		--labelled-item-name-size: #{toRem(42px)};
 		grid-area: class;
 		position: absolute;
-		right: toRem(5px);
 
 		img {
 			height: toRem(200px);
@@ -28,23 +28,6 @@ section.char-top {
 			transform: scaleX(-1);
 			filter: blur(2px);
 		}
-
-		.labelled-item-container .item-name {
-			transform: none;
-			top: 0%;
-			left: unset;
-			right: 0%;
-			line-height: var(--line-height-compact);
-		}
-
-		.char-class-tagline {
-			font-family: var(--font-emphasis-alt);
-			font-size: toRem(36px);
-			text-align: right;
-			line-height: var(--line-height-compact);
-			white-space: nowrap;
-		}
-
 	}
 
 	.char-heritage { grid-area: heritage }
@@ -56,8 +39,6 @@ section.char-top {
 		grid-area: coins;
 		.dotline {
 			--dotline-dot-size: #{toRem(18px)};
-			justify-content: center;
-			margin-top: toRem(3px);
 			.dot:nth-of-type(4n+1):not(.zero-dot) + .dot {
 				margin-left: toRem(5px);
 			}
@@ -66,7 +47,6 @@ section.char-top {
 
 	.char-stash {
 		grid-area: stash;
-		justify-content: center;
 		padding: 5px 0;
 		label {
 			font-family: var(--font-emphasis);
@@ -77,33 +57,67 @@ section.char-top {
 		.dotline {
 			.dot:nth-of-type(10n + 1):not(.zero-dot) {
 				margin-right: 10px;
-				transform: scaleX(1.3) scaleY(1.2);
-				margin-left: 3px;
-				filter: saturate(0.75) brightness(1.5);
 			}
 		}
 	}
 }
 
-section.experience {}
+section.stress-trauma {
+	display: flex;
+	justify-content: stretch;
+	align-items: stretch; // flex-start;
+	flex-wrap: nowrap;
+	border-top: 2px solid var(--blades-white);
 
-section.big-teeth-section {
-	border-color: var(--blades-white);
-	max-height: 60px;
-	margin-top: 0px;
+	.dotline-label {
+		font-size: toRem(20px);
+		line-height: 1;
+		padding: toRem(5px);
+		background: var(--blades-white);
+		color: var(--blades-black);
+		font-family: var(--font-emphasis);
+		text-transform: uppercase;
+		position: relative;
+		z-index: 4;
+		margin-right: toRem(5px);
+	}
 
-	.character-stress {}
-
-	.small-teeth-container {}
-
-	.trauma-list {
-		label {
-			.checkmark {
-				font-size: 16px;
-			}
+	.stress-teeth {
+		flex-grow: 1;
+		justify-content: flex-start;
+		align-items: flex-start;
+		.dotline {
+			--dotline-dot-sizeY: #{toRem(48px)};
+			--dotline-dot-sizeX: auto;
+			--dotline-dot-spacing: #{toRem(4px)};
 		}
 	}
+
+	.trauma-teeth {
+		justify-content: flex-start;
+		align-items: flex-end;
+
+		.dotline {
+			flex-grow: 1;
+			justify-content: center;
+			margin-top: toRem(-10px);
+			--dotline-dot-sizeY: #{toRem(32px)};
+			--dotline-dot-sizeX: auto;
+			--dotline-dot-spacing: #{toRem(4px)};
+		}
+	}
+
+	.trauma-conditions {
+		--active-text-color: var(--blades-red);
+		font-family: var(--font-emphasis);
+		color: var(--blades-white-bright);
+		text-transform: uppercase;
+
+
+	}
 }
+
+
 
 section.harm-armor {
 	.character-harm {
