--- a/templates/parts/attributes.hbs
+++ b/templates/parts/attributes.hbs
@@ -1,52 +1,35 @@
-<div id="character-{{actor._id}}-attributes" class="attributes">
+<div class="attributes">
 
-  {{#each data.attributes as |attribute attribute_name|}}
-
-  <div id="character-{{../actor._id}}-attributes-{{attribute_name}}" class="attribute">
-    <div id="character-{{../actor._id}}-attributes-{{attribute_name}}-title" class="attributes-exp">
-      <div class="stripe">
-        <a class="attribute-label roll-die-attribute rollable-text" data-roll-attribute="{{attribute_name}}">{{localize (concat attribute.label 'Short')}}</a>
-      </div>
-      <div class="stripe-tooth-body">
-        {{#multiboxes attribute.exp}}
-
-        <label
-                for="{{../actor._id}}-{{attribute_name}}-exp-0"><i
-                class="fab fa-creative-commons-zero nullifier"></i></label>
-        <input  data-dtype="Number" type="radio" id="{{../actor._id}}-{{attribute_name}}-exp-0"
-               name="data.attributes.{{attribute_name}}.exp" value="0" checked="checked">
-        {{#times_from_1 attribute.exp_max}}
-          <input  data-dtype="Number" type="radio" id="{{../../actor._id}}-{{attribute_name}}-exp-{{this}}"
-                 name="data.attributes.{{attribute_name}}.exp" value="{{this}}">
-          <label for="{{../../actor._id}}-{{attribute_name}}-exp-{{this}}"></label>
-        {{/times_from_1}}
-        {{/multiboxes}}
-      </div>
-    </div>
-
-    {{!-- Skills --}}
-
-    {{#each attribute.skills as |skill skill_name|}}
-
-    <div class="flex-horizontal">
-      <div class="attributes-container">
-
-        {{#multiboxes skill.value}}
-
-        {{#times_from_0 4}}
-        <input  data-dtype="Number" type="radio" id="attributes-{{../../../actor._id}}-{{skill_name}}-{{this}}"
-               name="data.attributes.{{attribute_name}}.skills.{{skill_name}}.value" value="{{this}}">
-        <label for="attributes-{{../../../actor._id}}-{{skill_name}}-{{this}}"></label>
-        {{/times_from_0}}
-
-        <div class="attribute-skill-label roll-die-attribute rollable-text" data-roll-attribute="{{skill_name}}">{{localize skill.label}}</div>
-        {{/multiboxes}}
-      </div>
-    </div>
-    {{/each}}
-
-  </div>
-  {{/each}}
-
+  {{#each data.attributes as |attribute_data attribute_name|}}
+	<div class="labelled-item labelled-horizontal labelled-attribute">
+		<label>{{case "title" attribute_name}}</label>
+		<div class="labelled-item-container">
+				{{> "systems/eunos-blades/templates/parts/dotline.hbs"
+					data=(lookup data.experience attribute_name)
+					target=(concat "data.experience." attribute_name ".value")
+					iconEmpty="teeth/long-strong-empty.svg"
+					iconFull="teeth/long-strong-full.svg"
+					blockClass="teeth long-teeth"
+				}}
+		</div>
+	</div>
+	{{#each attribute_data as |action_data action_name|}}
+	<div class="labelled-item labelled-horizontal labelled-action">
+		<label>{{case "upper" action_name}}</label>
+		<div class="labelled-item-container">
+				{{> "systems/eunos-blades/templates/parts/dotline.hbs"
+					data=action_data
+					target=(concat "data.attributes." ../attribute_name "." action_name ".value")
+					iconEmpty="dot-empty.svg"
+					iconEmptyHover="dot-empty-hover.svg"
+					iconFull="dot-full.svg"
+					iconFullHover="dot-full-hover.svg"
+					zeroDot="dot-zero.svg"
+					blockClass="action"
+				}}
+		</div>
+	</div>
+	{{/each}}
+	{{/each}}
 
 </div>
